--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,15 @@
     "axios": "^1.6.1",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
+    "langchain": "^0.0.186",
+    "openai": "^4.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.173",
     "react-router-dom": "^6.18.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
